Fix minor spacing issues.

--- a/style.css
+++ b/style.css
@@ -245,10 +245,6 @@
 	box-sizing: border-box;
 }
 
-.component-selector .ivu-dropdown-rel .ivu-btn {
-	padding-right: 24px;
-}
-
 .component-selector .ivu-btn {
 	padding-left: 8px;
 	padding-right: 8px;
